--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "python.analysis.extraPaths": [
-        "./gaussian-splatting"
+        "./gaussian-splatting",
+        "./DIS/IS-Net"
     ]
 }
