--- a/conf/config.yaml
+++ b/conf/config.yaml
@@ -7,9 +7,9 @@ core:
   device: cuda
 
 misc:
-  load_image_path: "/home/andrea/Scaricati/mushroom.png"
+  load_image_path: "data/house.jpeg"
   prompt: 'A statue of a man with a sword behind'
-  edit: 'make it made of gold'
+  edit: 'make it look like a cactus'
   seed: 41
 
 out_path: 'out/'
