--- a/conf/models/default.yaml
+++ b/conf/models/default.yaml
@@ -12,4 +12,5 @@ defaults:
   - sd: stable_diffusion
   - inpainting: stable_inpainting
   - instruct: instruct_pix_2_pix
-  - zero: zero123plus
+  - zero_plus: zero123plus
+  - zero: sd-objaverse-finetune-c_concat-256
